[gd_scene load_steps=11 format=3 uid="uid://bpw80yw1c0jjg"]

[ext_resource type="Script" uid="uid://cnhj1q6jwapxq" path="res://scripts/enemy.gd" id="1_xx6g3"]
[ext_resource type="PackedScene" uid="uid://cmeoqmaisrbk8" path="res://scenes/coin.tscn" id="2_2wk5q"]
[ext_resource type="PackedScene" uid="uid://bxgy2r2lb2wyn" path="res://scenes/bullet.tscn" id="3_b0uxi"]
[ext_resource type="Texture2D" uid="uid://cpnuox5b7vvho" path="res://assets/enemy.png" id="4_1odl8"]
[ext_resource type="AudioStream" uid="uid://cxoqxsyr78x21" path="res://sfx/breeze-of-blood-122253.mp3" id="5_n43p3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 31.0
height = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7p1mj"]
radius = 547.32074

[sub_resource type="Animation" id="Animation_4ra3w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_md0e3"]
resource_name = "take_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0.12156863, 0.827451), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ra3w"]
_data = {
&"RESET": SubResource("Animation_4ra3w"),
&"take_damage": SubResource("Animation_md0e3")
}

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_xx6g3")
type = "Ranged"
drop = ExtResource("2_2wk5q")
bullet_scene = ExtResource("3_b0uxi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_1odl8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-10, 0)
shape = SubResource("CapsuleShape2D_md0e3")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
shape = SubResource("CircleShape2D_7p1mj")

[node name="Stay Away" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stay Away"]
visible = false
shape = SubResource("CircleShape2D_7p1mj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4ra3w")
}

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_n43p3")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="body_entered" from="Stay Away" to="." method="stay_away"]
[connection signal="body_exited" from="Stay Away" to="." method="away_you_go"]
